--- a/front/package.json
+++ b/front/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"@lucide/svelte": "^0.511.0"
 	}
 }
