--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.511.0"
+		"@lucide/svelte": "^0.511.0",
+		"firebase": "^11.8.0"
 	}
 }
