SCRUM-52 get deck by id

--- a/front/.env.example
+++ b/front/.env.example
@@ -4,3 +4,6 @@ FIREBASE_PROJECTID=
 FIREBASE_STORAGEBUCKET=
 FIREBASE_MESSAGINGSENDERID=
 FIREBASE_APPID=
+
+FIREBASE_AUTH_EMAIL=
+FIREBASE_AUTH_PASSWORD=
