SCRUM-54 update .env.exemple

--- a/front/.env.example
+++ b/front/.env.example
@@ -1,9 +1,9 @@
-FIREBASE_APIKEY=
-FIREBASE_AUTHDOMAIN=
-FIREBASE_PROJECTID=
-FIREBASE_STORAGEBUCKET=
-FIREBASE_MESSAGINGSENDERID=
-FIREBASE_APPID=
+PUBLIC_FIREBASE_APIKEY=
+PUBLIC_FIREBASE_AUTHDOMAIN=
+PUBLIC_FIREBASE_PROJECTID=
+PUBLIC_FIREBASE_STORAGEBUCKET=
+PUBLIC_FIREBASE_MESSAGINGSENDERID=
+PUBLIC_FIREBASE_APPID=
 
 FIREBASE_AUTH_EMAIL=
 FIREBASE_AUTH_PASSWORD=
